--- a/content/themes/elements/sass/store/_product-materials.scss
+++ b/content/themes/elements/sass/store/_product-materials.scss
@@ -11,6 +11,7 @@
 
       img{
         max-width: 150px;
+        object-fit: contain;
       }
 
       p{
